--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
+body {
+  margin: 0;
+}
+.wrapper {
+  margin: auto;
+  width: 80%;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
 .logo {
-	font-family: 'PT Serif', serif;
-	font-weight: bold;
-	font-size: 24px;
+  font-family: 'PT Serif', serif;
+  font-weight: bold;
+  font-size: 24px;
+  padding: 40px 0;
+}
+.nav {
+  display: flex;
+  align-items: center;
 }
 .nav__link {
-	font-family: 'Roboto', sans-serif;
-	font-weight: bold;
-	font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 0 13px;
+}
+.nav__link:last-child {
+  padding-right: 0;
+}
+.section {
+
 }
