--- a/style.css
+++ b/style.css
@@ -10,10 +10,28 @@ body {
   justify-content: space-between;
 }
 .logo {
-  font-family: 'PT Serif', serif;
-  font-weight: bold;
-  font-size: 24px;
+  position: relative;
   padding: 40px 0;
+  padding-left: 44px;
+  font: 24px/31px pt_serifbold;
+}
+.logo__circle {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  opacity: .7;
+}
+.logo__circle_color_dark-blue {
+  background: #0056EC;
+}
+.logo__circle_color_blue {
+  left: 8px;
+  top: 56%;
+  background: #C8DBFB;
 }
 .nav {
   display: flex;
