--- a/style.css
+++ b/style.css
@@ -38,13 +38,42 @@ body {
   align-items: center;
 }
 .nav__link {
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  padding: 0 13px;
+  position: relative;
+  margin-right: 26px;
+  font: bold 14px/16px Roboto, sans-serif;
+  color: #000;
+  text-decoration: none;
+  transition: opacity .5s;
 }
 .nav__link:last-child {
-  padding-right: 0;
+  margin-right: 0;
+}
+.nav__link_active:after {
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #0056EC;
+}
+.nav__link:after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 0;
+  height: 2px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity .5s;
+}
+.nav__link:hover {
+  opacity: 0.5;
+}
+.nav__link:hover:after, .nav__link_active:after {
+  opacity: 1;
+  width: 100%;
 }
 .section {
 
