--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   height: 2px;
   background: #0056EC;
   opacity: 0;
-  transition: opacity .5s;
+  transition: opacity .5s, width .5s;
 }
 .nav__link:hover {
   opacity: 0.5;
