--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
 .logo {
   position: relative;
@@ -75,6 +76,31 @@ body {
   opacity: 1;
   width: 100%;
 }
-.section {
-
+.main {
+  padding: 0 74% 100px 0;
+  background: top right no-repeat url(images/Frame.svg);
+}
+.main__title {
+  margin: 0 0 40px 0;
+  font: 50px/66px pt_serifbold;
+}
+.main__title-text_highlight {
+  background: #ECF3FF;
+}
+.main__subtitle {
+  margin: 0 0 41px 0;
+  font: 500 18px/21px Roboto, sans-serif;
+}
+.main__button {
+  display: inline-block;
+  font: 500 14px/16px Roboto, sans-serif;
+  padding: 14px 16px;
+  border-radius: 4px;
+  color: #FFFF;
+  background: #0056EC;
+  text-decoration: none;
+  transition: opacity .5s;
+}
+.main__button:hover {
+  opacity: .5;
 }
