--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  opacity: 0.7;
+  opacity: .7;
 }
 
 .logo__circle_color_dark-blue {
@@ -52,7 +52,7 @@ body {
   font: bold 18px/21px Roboto, sans-serif;
   color: #000;
   text-decoration: none;
-  transition: opacity 0.5s;
+  transition: opacity .5s;
 }
 
 .nav__link:last-child {
@@ -78,7 +78,7 @@ body {
   height: 2px;
   background: #0056ec;
   opacity: 0;
-  transition: opacity 0.5s, width 0.5s;
+  transition: opacity .5s, width .5s;
 }
 
 .nav__link:hover {
