--- a/style.css
+++ b/style.css
@@ -10,17 +10,21 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 170px;
+  margin-bottom: 130px;
 }
 
-.logo {
+.logo-mobile {
+  display: none;
+}
+
+.logo, .logo-mobile {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
   font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
 }
 
-.logo__circle {
+.logo__circle, .logo-mobile__circle {
   position: absolute;
   left: 0;
   top: 50%;
@@ -31,11 +35,11 @@ body {
   opacity: .7;
 }
 
-.logo__circle_color_dark-blue {
+.logo__circle_color_dark-blue, .logo-mobile__circle_color_dark-blue {
   background: #0056ec;
 }
 
-.logo__circle_color_blue {
+.logo__circle_color_blue, .logo-mobile__circle_color_blue {
   left: 8px;
   top: 56%;
   background: #c8dbfb;
@@ -56,6 +60,10 @@ body {
 }
 
 .nav__link:last-child {
+  margin-right: 0;
+}
+
+.nav__link_no-margin {
   margin-right: 0;
 }
 
@@ -90,6 +98,14 @@ body {
   width: 100%;
 }
 
+.nav__burger {
+  display: none;
+}
+
+.link__burger {
+  display: none;
+}
+
 .main {
   padding: 0 65% 170px 0;
   background: top right no-repeat url(images/Frame.svg);
@@ -97,7 +113,7 @@ body {
 
 .main__title {
   margin: 0 0 40px 0;
-  padding-top: 70px;
+  padding-top: 76px;
   font: 66px/87px pt_serifbold, arial, helvetica, sans-serif;
 }
 
@@ -106,7 +122,7 @@ body {
 }
 
 .main__subtitle {
-  margin: 0 0 41px 0;
+  margin: 0 12% 41px 0;
   font: 500 22px/26px Roboto, sans-serif;
 }
 
@@ -123,4 +139,159 @@ body {
 
 .main__button:hover {
   opacity: 0.5;
+}
+
+@media (max-width: 1830px) {
+  .main {
+    padding: 0 62% 170px 0;
+  }
+
+  .main__subtitle {
+    margin: 0 15% 41px 0;
+  }
+}
+
+@media (max-width: 1681px) {
+  .wrapper {
+    width: 68%;
+  }
+
+  .header {
+    margin-bottom: 80px;
+  }
+
+  .nav__link {
+    font: bold 14px/16px Roboto, sans-serif;
+  }
+
+  .main {
+    padding: 0 55% 170px 0;
+    background: top right no-repeat url(images/Frame_1366.svg);
+  }
+
+  .main__title {
+    padding-top: 20px;
+    font: 50px/66px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    font: 500 18px/21px Roboto, sans-serif;
+  }
+
+  .main__button {
+    font: 500 14px/16px Roboto, sans-serif;
+    padding: 14px 25px;
+  }
+}
+
+@media (max-width: 1334px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media (max-width: 1134px) {
+  .main__title {
+    font: 45px/53px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    font: 500 16px/19px Roboto, sans-serif;
+  }
+}
+
+@media (max-width: 1055px) {
+  .wrapper {
+    width: 75%;
+  }
+
+  .nav__link {
+    display: none;
+  }
+
+  .nav__burger {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0;
+    position: relative;
+  }
+
+  .link__burger {
+    position: relative;
+    display: inline-block;
+    width: 25px;
+    height: 17px;
+    margin: auto;
+    border-top: 3px solid #0056ec;
+    border-bottom: 3px solid #0056ec;
+  }
+
+  .link__burger:before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 0px;
+    width: 100%;
+    border-top: 3px solid #0056ec;
+  }
+
+  .main {
+    padding: 0 16% 0 16%;
+    background: top center no-repeat url(images/Frame_1366.svg);
+    text-align: center;
+    align-items: center;
+  }
+
+  .main__title {
+    padding-top: 500px;
+  }
+
+  .main__subtitle {
+    margin: 0 0 41px 0;
+  }
+
+  .main__button {
+    margin-bottom: 45px;
+  }
+}
+
+@media (max-width: 683px) {
+  .wrapper {
+    width: 87%;
+  }
+
+  .header {
+    margin-bottom: 8px;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .logo-mobile {
+    display: block;
+    padding: 44px 0;
+  }
+
+  .main {
+    padding: 0 20% 0 20%;
+    background: top center no-repeat url(images/Frame_375.svg);
+  }
+
+  .main__title {
+    padding-top: 260px;
+    margin: 0 0 32px 0;
+    font: 30px/40px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin: 0 0 25px 0;
+    font: 500 16px/19px Roboto, sans-serif;
+  }
+}
+
+@media (max-width: 452px) {
+  .main {
+    padding: 0 11% 0 11%;
+  }
 }
