--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@keyframes move {
+  0% {
+    transform: translateX(0%);
+    opacity: 25%;
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 100%;
+  }
+}
+
 body {
   margin: 0;
 }
@@ -23,6 +34,15 @@ body {
   padding: 40px 0;
   padding-left: 44px;
   font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
+  opacity: 25%;
+  animation-name: move;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 .logo__circle,
