--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @keyframes move {
   0% {
-    transform: translateX(0%);
-    opacity: 25%;
+    transform: translateY(0%);
+  }
+
+  50% {
+    transform: translateY(12%);
   }
 
   100% {
-    transform: translateX(100%);
-    opacity: 100%;
+    transform: translateY(0%);
   }
 }
 
@@ -35,15 +37,6 @@ body {
   padding: 40px 0;
   padding-left: 44px;
   font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
-  opacity: 25%;
-  animation-name: move;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-out;
-  animation-delay: 1s;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-fill-mode: none;
-  animation-play-state: running;
 }
 
 .logo__circle,
@@ -164,6 +157,14 @@ body {
 
 .main__button:hover {
   opacity: 0.5;
+  animation-name: move;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: none;
+  animation-play-state: running;
 }
 
 @media (max-width: 1830px) {
